📃 docs: swagger
